--- a/app/views/common/_categorycontents.html.erb
+++ b/app/views/common/_categorycontents.html.erb
@@ -1,12 +1,13 @@
+
 <section class="products-grid">
+    <h2 class="page-title" style = "text-align:center"><%= @category.name %></span><span class="accent-color">.</span></h2>
   <div class="container">
     <div class="row products-container">
-
-
+      <% @category.products.each do |product| %>
               <div class="col-md-4 col-sm-6 col-xs-12 product">
             <div class="product-details text-center">
               <div class="align-vertical">
-                <h3><%= @category.name %></h3>
+                <h3><%= product.name %></h3>
                 <a href="index.html#" class="btn btn-primary">
                   <i class="fa fa-shopping-cart"></i>
                   View all</a>
@@ -15,6 +16,7 @@
             </div>
 
 
+        <% end %>
       </div>
       <!-- /.row -->
     </div>
