--- a/app/views/common/_categorycontents.html.erb
+++ b/app/views/common/_categorycontents.html.erb
@@ -8,14 +8,10 @@
             <div class="product-details text-center">
               <div class="align-vertical">
                 <h3><%= product.name %></h3>
-                <a href="index.html#" class="btn btn-primary">
-                  <i class="fa fa-shopping-cart"></i>
-                  View all</a>
-                <p class="product-price"></div>
+                  <%= link_to 'View Product', product_path(product), :class => "btn btn-primary" %>
+                  <p class="product-price"></div>
               </div>
             </div>
-
-
         <% end %>
       </div>
       <!-- /.row -->
