--- a/app/views/common/_sidr.html.erb
+++ b/app/views/common/_sidr.html.erb
@@ -7,13 +7,14 @@
       <%= link_to 'Store', :all_products %>
     </li>
     <li>
-      
+      <a href="categories/2">Edibles</a>
+
     </li>
     <li>
       <a href="index.html#">Flowers</a>
     </li>
     <li>
-      <a href="index.html#">Concentrates</a>
+      <a href="categories/2">Concentrates</a>
     </li>
     <li>
       <a href="index.html#">Tinctures/Topicals</a>
