--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -19,6 +19,14 @@
   <div class="container">
     <div class = "col-md-12">
       <h2>Cart Details</h2>
+      <br>
+      <% @cart.product_item.each do |item| %>
+      <ul>
+        <li>
+          <%=item.quantity %>&times;<%= item.product.title %>
+        </li>
+      </ul>
+      <%end %>
         </div>
       </div>
     </section>
