--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -33,10 +33,10 @@
     <div class="col-md-6 col-md-offset-3">
       <ul class="footer-navigation">
         <li class="active">
-          <a href="index.html">Home</a>
+          <%= link_to 'All Products', :all_products %>
         </li>
         <li>
-          <a href="about.html">About</a>
+      <%= link_to 'About', :about %>
         </li>
         <li>
           <a href="catalog.html">Catalog</a>
