--- a/app/views/common/_sidr.html.erb
+++ b/app/views/common/_sidr.html.erb
@@ -17,9 +17,9 @@
 
     <li class="divider">
       <span></span></li>
-    <li>
-      <a href="privacy.html">Privacy</a>
-    </li>
+      <li class="active">
+        <%= link_to 'About', :about %>
+      </li>
     <li>
       <a href="terms.html">Terms & conditions</a>
     </li>
