--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 <a href="/">Home</a>
               </li>
               <li>
-                <a href="pages/about.html">About</a>
+                <%= link_to 'About', :about %>
               </li>
               <li class="dropdown">
                 <a href="products.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Products
