--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+				<section class="about">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+<h1 class="page-title" style = "text-align:center"><%= @aboutPage.title %></span><span class="accent-color">.</span></h1>
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<h3>Our Story</h3>
+							<p class="subtitle">Beyond Medication</p>
+						</div>
+						<div class="col-md-8">
+							<%= @aboutPage.content %>
+						</div>
+					</div><!-- /.row -->
+				</div><!-- /.container -->
+			</section>
